[gd_scene load_steps=9 format=3 uid="uid://brh1m30jd2xlm"]

[ext_resource type="Script" path="res://开始场景/gameStart.gd" id="1_hgfk2"]
[ext_resource type="Texture2D" uid="uid://muvyq7iju52" path="res://资源/图片/bg.png" id="1_yxyfk"]
[ext_resource type="Texture2D" uid="uid://c3cs8a4pmsusk" path="res://资源/图片/panel_bg.png" id="3_wfba6"]
[ext_resource type="LabelSettings" uid="uid://bkjppqsnbovqd" path="res://资源/字体/label_settings.tres" id="4_aajj6"]
[ext_resource type="Theme" uid="uid://25kjm1yjm6l5" path="res://资源/字体/number_input.tres" id="5_rmdbu"]
[ext_resource type="Theme" uid="uid://b2cp72s3ew2bu" path="res://资源/字体/button.tres" id="6_0cale"]
[ext_resource type="FontFile" uid="uid://c7ub61rbtiye7" path="res://资源/字体/unifont-15.1.02.otf" id="6_h81dh"]

[sub_resource type="LabelSettings" id="LabelSettings_rxidm"]
font = ExtResource("6_h81dh")
font_size = 20
font_color = Color(0.882353, 0.270588, 0.270588, 1)

[node name="gameStart" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yxyfk")
expand_mode = 1
stretch_mode = 1
script = ExtResource("1_hgfk2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -275.0
offset_right = 200.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("3_wfba6")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonCountLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "生成的格子数量"
label_settings = ExtResource("4_aajj6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCountEnterContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Row" type="SpinBox" parent="CenterContainer/VBoxContainer/ButtonCountEnterContainer"]
layout_mode = 2
theme = ExtResource("5_rmdbu")
min_value = 1.0
value = 1.0
alignment = 2
update_on_text_changed = true

[node name="RowLabel" type="Label" parent="CenterContainer/VBoxContainer/ButtonCountEnterContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "行  "
label_settings = ExtResource("4_aajj6")
vertical_alignment = 1

[node name="Col" type="SpinBox" parent="CenterContainer/VBoxContainer/ButtonCountEnterContainer"]
layout_mode = 2
theme = ExtResource("5_rmdbu")
min_value = 1.0
value = 1.0
alignment = 2
update_on_text_changed = true

[node name="ColLabel" type="Label" parent="CenterContainer/VBoxContainer/ButtonCountEnterContainer"]
layout_mode = 2
text = "列"
label_settings = ExtResource("4_aajj6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Nothing" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="DiamondCountLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "生成的钻石数量"
label_settings = ExtResource("4_aajj6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiamondCountEnterContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="DiamondCount" type="SpinBox" parent="CenterContainer/VBoxContainer/DiamondCountEnterContainer2"]
layout_mode = 2
theme = ExtResource("5_rmdbu")
min_value = 1.0
max_value = 10000.0
value = 1.0
alignment = 2
update_on_text_changed = true

[node name="DiamondCountLabel" type="Label" parent="CenterContainer/VBoxContainer/DiamondCountEnterContainer2"]
layout_mode = 2
text = "颗"
label_settings = ExtResource("4_aajj6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorTips" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
label_settings = SubResource("LabelSettings_rxidm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("6_0cale")
text = "开始游戏"
icon_alignment = 1

[node name="Load" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("6_0cale")
text = "读取游戏"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("6_0cale")
text = "结束游戏"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/ButtonCountEnterContainer/Row" to="." method="_on_row_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/ButtonCountEnterContainer/Col" to="." method="_on_col_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/DiamondCountEnterContainer2/DiamondCount" to="." method="_on_diamond_count_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
